--- a/styles.css
+++ b/styles.css
@@ -170,3 +170,8 @@ input[type='color']::-webkit-color-swatch {
 }
 
 /* Iteration 3: Style the coloring buttons */
+input{
+  height: 100px;
+  width: 100px;
+  border-radius: 5px;
+}
